Fix thanks overflow

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -508,6 +508,10 @@ h2 {
 form {
 	.form-message {
 		display: none;
+
+		h1 {
+			font-size: 4rem;
+		}
 	}
 }
 
